src/test/resources/sdp/examples/should-pass/with-email/single/minimal-expected.sdp
v=0
o=- 123 0 IN IP4 streaming.awesome.com
s=my session
e=j.doe@example.com
