src/test/resources/sdp/examples/should-fail/bad-data/originator/bad-addrtype/minimal.sdp
v=0
o=- 123 0 IN IP7 streaming.awesome.com
s=my session
